# trexo

./: .gitignore  CMakeLists.txt  board.c  board.h  clickable_image.h  game_config.c  game_config.h  main.c  main_window.h  trexo
src/: bitset.c  bitset.h  board.c  board.h  clickable_image.c  clickable_image.h  const.h  game_config.c  game_config.h  game_state.c  game_state.h  main.c  main_window.c  main_window.h
